# TheCodeBookCipherChallenges

./: .gitignore  CMakeLists.txt  PSEUDO  README.md
src/: Exceptions.h  FileReader.cpp  FileReader.h  english_quadgrams.txt  main.cpp  test.txt
src/alphabets/: Alphabet.cpp  Alphabet.h  Language.h
src/cipherTexts/: stage1.txt  test.txt
src/ciphers/: AlphabeticChromosomeGenerator.cpp  AlphabeticChromosomeGenerator.h  Cipher.h  ICipher.h  MonoAlphabeticSubstitutionCipher.cpp  MonoAlphabeticSubstitutionCipher.h  SubstitutionCipher.cpp  SubstitutionCipher.h
src/fitnessMeasure/: FitnessMeasure.cpp  FitnessMeasure.h  QuadGram.cpp  QuadGram.h
src/frequencyAnalysis/: CharacterFrequency.cpp  CharacterFrequency.h  FrequencyAnalysis.cpp  FrequencyAnalysis.h  LetterFrequency.cpp  LetterFrequency.h
src/geneticAlgorithm/: Chromosome.cpp  Chromosome.h  Fitness.cpp  Fitness.h  IChromosome.h  IChromosomeGenerator.h  Individual.cpp  Individual.h  Population.cpp  Population.h
src/hillClimber/: Chromosome.cpp  Chromosome.h  Fitness.cpp  Fitness.h  HillClimber.cpp  HillClimber.h  Individual.cpp  Individual.h  Population.cpp  Population.h
src/letterFrequencies/: digraph.txt  repeated.txt  single.txt  trigraph.txt
src/lib/: CsvReader.cpp  CsvReader.h  FileLines.cpp  FileLines.h  FileReader.cpp  FileReader.h  StringUtils.cpp  StringUtils.h
src/stage1/: Stage1.cpp  Stage1.h
src/stages/: Stage.cpp  Stage.h  Stage1.cpp  Stage1.h  Stage2.h
