cmake_minimum_required(VERSION 3.12)
project(TheCodeBookCipherChallenges)

set(CMAKE_CXX_STANDARD 17)

add_executable(TheCodeBookCipherChallenges src/main.cpp src/frequencyAnalysis/LetterFrequency.cpp src/frequencyAnalysis/LetterFrequency.h src/frequencyAnalysis/FrequencyAnalysis.cpp src/frequencyAnalysis/FrequencyAnalysis.h src/fitnessMeasure/FitnessMeasure.cpp src/fitnessMeasure/FitnessMeasure.h src/lib/FileReader.cpp src/lib/FileReader.h src/fitnessMeasure/QuadGram.cpp src/fitnessMeasure/QuadGram.h src/lib/StringUtils.cpp src/lib/StringUtils.h src/hillClimber/HillClimber.cpp src/hillClimber/HillClimber.h src/hillClimber/Population.cpp src/hillClimber/Population.h src/hillClimber/Chromosome.cpp src/hillClimber/Chromosome.h src/hillClimber/Fitness.cpp src/hillClimber/Fitness.h src/hillClimber/Individual.cpp src/hillClimber/Individual.h src/ciphers/SubstitutionCipher.cpp src/ciphers/SubstitutionCipher.h src/stages/Stage1.cpp src/stages/Stage1.h src/stages/Stage.cpp src/stages/Stage.h src/stages/Stage2.cpp src/stages/Stage2.h)